--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -25,6 +26,10 @@
     "jose": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.429.0",
+    "markmap-common": "^0.17.0",
+    "markmap-lib": "^0.17.0",
+    "markmap-toolbar": "^0.17.0",
+    "markmap-view": "^0.17.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
@@ -32,11 +37,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "markmap-common": "^0.17.0",
-    "markmap-lib": "^0.17.0",
-    "markmap-toolbar": "^0.17.0",
-    "markmap-view": "^0.17.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
