--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_SERVER_API=http://localhost:3001
+NEXT_PUBLIC_FRONTEND_API=http://localhost:3000
+NEXT_PUBLIC_FRONTEND_UNAUTH_API=http://localhost:3000
