chore: updated .env.template

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,5 @@
-NEXT_PUBLIC_SERVER_API=http://localhost:4000
+NEXT_PUBLIC_API="Backend API URL"
+NEXT_PUBLIC_SERVER_API="Backend API URL"
+WEB_SOCKET_URL="Socket URL"
+REDIRECT_URL_FRONTEND="Frontend URL, not the app one"
+REDIRECT_URL_APP="Frontend URL, app one"
